--- a/osAdmin/src/main/webapp/css/admin.css
+++ b/osAdmin/src/main/webapp/css/admin.css
@@ -9,7 +9,7 @@
     width: 100%;
 }
 
-#top_welcome{
+#top_welcome {
     margin-left: 60%;
     font-size: 12px;
     color: #b0b0b0;
@@ -27,20 +27,20 @@
     color: #FFFFFF;
 }
 
-#left{
+#left {
     width: 20%;
     float: left;
     margin-top: 40px;
     margin-left: 20px;
 }
 
-#left #left_selected{
+#left #left_selected {
     background-color: #3ee3ff;
     color: #fff;
     font-weight: bold;
 }
 
-#left a{
+#left a {
     text-decoration: none;
     color: #000;
     display: block;
@@ -49,27 +49,27 @@
     padding: 30px;
 }
 
-#left a:hover{
+#left a:hover {
     background-color: #65ff31;
     color: #fff;
     font-weight: bold;
 }
 
-.left_top{
+.left_top {
     background-color: #cccccc;
     border-radius: 5px 5px 0 0;
 }
 
-.left_middle{
+.left_middle {
     background-color: #cccccc;
 }
 
-.left_buttom{
+.left_buttom {
     background-color: #cccccc;
     border-radius: 0 0 5px 5px;
 }
 
-#query_table{
+#query_table {
     width: 100%;
     border: solid;
     border-radius: 5px;
@@ -77,21 +77,26 @@
     padding: 6px;
 }
 
-#query_table input[type="text"]{
+.query_text {
     margin-left: 10px;
     width: 70%;
 }
 
-#right{
+.query_price{
+    margin-left: 10px;
+    width: 30%;
+}
+
+#right {
     border: #b0b0b0 solid;
     margin: 40px 4% 0 24%;
     border-radius: 5px;
-    width:70%;
-    height:560px;
+    width: 70%;
+    height: 560px;
     padding: 20px;
 }
 
-#right #welcome{
+#right #welcome {
     font-size: 40px;
     line-height: 200px;
     text-align: center;
@@ -100,77 +105,106 @@
     background-color: #d9d6d5;
 }
 
-#right table{
+#right table {
     width: 100%;
     text-align: center;
 }
 
-#table{
+#table {
     width: 100%;
     border: solid;
     border-radius: 5px;
     margin-top: 10px;
-    height:400px;
-    overflow-y:auto;
+    height: 400px;
+    overflow-y: auto;
 }
 
-#right_bottom{
+#right_bottom {
     margin-top: 20px;
 }
 
-.right_text{
+.right_text {
     font-weight: bold;
     font-size: 20px;
 }
 
-#table tr{
+#table th {
+    background: #0090D7;
+    font-weight: normal;
+    line-height: 30px;
+    font-size: 14px;
+    color: #FFF;
+}
+
+#table tr:nth-child(odd) {
+    background: #e9e9e9;
+}
+
+#table td:nth-child(even) {
+    color: #C00;
+}
+
+#table tr {
     height: 60px;
 }
 
-#table_head td{
-    font-weight: bold;
-    color: #3b456b;
-    /*border-bottom: #b0b0b0 solid 1px;*/
+#table tr:hover {
+    background: #73B1E0;
+    color: #FFF;
 }
 
-.table_body td{
-    border-top: #b0b0b0 solid 1px;
+#table td,#table th {
+    border: 1px solid #EEE;
+    padding: 0;
 }
 
-.del{
+#brief{
+    width: 670px;
+    height: 60px;
+    overflow-x: auto;
+}
+
+.del {
     text-decoration: none;
     color: #000;
 }
 
-.del:hover{
+.del:hover {
     color: #b0b0b0;
 }
 
-input[type="text"]{
+#tip{
+    color: #e54040;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 120px;
+}
+
+input[type="text"] {
     box-sizing: border-box;
-    border-radius:4px;
+    border-radius: 4px;
     height: 40px;
     line-height: 40px;
-    border:1px solid #c8cccf;
-    color:#6a6f77;
-    outline:0;
-    padding:0 8px;
-    text-decoration:none;
+    border: 1px solid #c8cccf;
+    color: #6a6f77;
+    outline: 0;
+    padding: 0 8px;
+    text-decoration: none;
     /*width:100%;*/
 }
 
-input[type="submit"]{
+input[type="submit"] {
     box-sizing: border-box;
-    border-radius:4px;
+    border-radius: 4px;
     height: 30px;
-    border:1px solid #c8cccf;
-    outline:0;
-    padding:0 8px;
-    text-decoration:none;
+    border: 1px solid #c8cccf;
+    outline: 0;
+    padding: 0 8px;
+    text-decoration: none;
     cursor: pointer;
     margin-left: 10px;
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover {
     color: #fff;
 }
