--- a/osUser/src/main/webapp/css/index.css
+++ b/osUser/src/main/webapp/css/index.css
@@ -6,7 +6,7 @@
 
         #topd{
             background-color: #333;
-            width: 1920px;
+            width: 1518px;
         }
         .tops{
             color: #424242;
@@ -35,17 +35,17 @@
             color: #b0b0b0;
             text-decoration: none;
             font-size: 12px;
-            margin-left: 1100px;
+            margin-left: 1060px;
         }
         #topa2:hover{
             color: #FFFFFF;
         }
 
         #topd1{
-            margin-left: 10%;
+            margin-left: 120px;
             padding-top: 20px;
             height: 76px;
-            width: 1920px;
+            width: 1290px;
         }
         #topd1_i{
             float: left;
@@ -60,7 +60,7 @@
             text-decoration: none;
             color: #333;
             line-height: 60px;
-            margin-left: 14px;
+            margin-left: 40px;
         }
         .topd1_a:hover{
             color: #ff6700;
@@ -75,39 +75,32 @@
         #topd1_d2:hover{
             border: #999 1px solid;
         }
-        #topd1_a{
-            display: inline-block;
-            font-size: 12px;
-            text-decoration: none;
-            color: #666;
-            padding: 1px 4px;
-        }
-        #topd1_a:hover{
-            color: #fff;
-            background-color: #ff6700;
-        }
-        #topd1_t{
+        #cname{
             height: 44px;
             border: none;
             outline: none;
         }
+        #sub{
+            display: none;
+        }
         #topd3{
-            margin-left: 10%;
-            width: 1920px;
+            margin-left: 120px;
+            width: 1190px;
         }
         #topd3_d{
             background-color: #424242;
             position: absolute;
             width: 234px;
-            height: 420px;
+            height: 570px;
             padding: 20px 0;
             opacity: 0.9;
+            margin-top: 150px;
         }
         .topd3_a{
             display: block;
-            line-height: 44px;
+            line-height: 110px;
             font-size: 14px;
-            height: 10%;
+            height: 20%;
             padding-left: 10%;
             text-decoration: none;
             color: #FFFFFF;
@@ -119,7 +112,7 @@
         #topd4{
             margin-left: 10%;
             padding-top: 10px;
-            width: 1920px;
+            width: 1518px;
         }
         .topd4_i{
             height: 170px;
@@ -130,7 +123,7 @@
         #topd5{
             margin-left: 10%;
             margin-top: 40px;
-            width: 1920px;
+            width: 1518px;
         }
         #topd5 h2{
             font-weight: normal;
@@ -160,7 +153,7 @@
         #topd6{
             margin-top: 40px;
             margin-left: 10%;
-            width: 1920px;
+            width: 1520px;
         }
         #topd6 img{
             width: 1226px;
@@ -169,13 +162,12 @@
 
         #mid{
             margin-top: 40px;
-            padding-top: 60px;
+            padding: 60px 0;
             background-color: #f5f5f5;
-            width: 1920px;
+            width: 1518px;
         }
         .mid_d{
-            margin-left: 8%;
-            margin-top: 30px;
+            margin-left: 120px;
         }
         .mid_d h2{
             font-weight: normal;
@@ -219,13 +211,6 @@
         }
         .mid_i h6{
             color: #999999;
-        }
-       .mid_m{
-            margin-top: 40px;
-        }
-        .mid_m img{
-            width: 1226px;
-            height: 120px;
         }
         .mid_p2{
             display: inline-block;
@@ -271,3 +256,59 @@
             margin-top: 40px;
             margin-left: 20px;
         }
+     .next{
+         width: 32px;
+         height: 60px;
+         border: none;
+         cursor:pointer;
+         background-image: url(../images/next.png);
+         opacity:0.5;
+     }
+     .next:hover{
+         background-color: #d5d5d5;
+         opacity:0.9;
+     }
+     .retu{
+         width: 32px;
+         height: 60px;
+         border: none;
+         cursor:pointer;
+         background-image: url(../images/retu.png);
+         opacity:0.5;
+     }
+     .retu:hover{
+         background-color: #d5d5d5;
+         opacity:0.9;
+     }
+     .carousel_next{
+         position: absolute;
+         top: 360px;
+         left: 1318px;
+     }
+     .carousel_retu{
+         position: absolute;
+         top: 360px;
+     }
+     .carousel {
+         position: absolute;
+         transition: all 0.5s ease-in 0s;
+         width: 400%;
+     }
+     .carousel div {
+         float: left;
+         text-align: center;
+         width: 25%;
+     }
+     .carousel div img{
+         width: 100%;
+     }
+     .d2{
+         width: 1200px;
+         height: 500px;
+     }
+     .d1{
+         width: 1230px;
+         min-height:460px;
+         position: relative;
+         overflow: hidden;
+     }
